Refactor into a flask app

--- a/templates/existing_rsvp.html
+++ b/templates/existing_rsvp.html
@@ -3,7 +3,7 @@
         <title>RSVP for Bethan and Edward's Wedding</title>
     </head>
     <body>
-        <h1>RSVP for email@address.com</h1>
+        <h1>RSVP for {{email}}</h1>
         <p>You have responded for the following guests:</p>
 
 		<table >
@@ -36,6 +36,10 @@
 		</table>
 
 		<a href='#'>Add another guest</a>
+ 
+        <p>
+            <a href='/site'>Back to main site</a>
+        </p>
 
     </body>
 </html>
