--- a/templates/new_rsvp.html
+++ b/templates/new_rsvp.html
@@ -38,8 +38,8 @@
                     const guest = {
                         firstname: document.getElementById(`guest_${i}_firstname`).value.trim(),
                         lastname: document.getElementById(`guest_${i}_lastname`).value.trim(),
-                        isAttending: document.getElementById(`guest_${i}_attending`).value == 'true',
-                        hasDiet: document.getElementById(`guest_${i}_has_diet`).value == 'true',
+                        isAttending: document.getElementById(`guest_${i}_attending`).value,
+                        hasDiet: document.getElementById(`guest_${i}_has_diet`).value,
                         dietDetails: document.getElementById(`guest_${i}_diet_details_text`).value.trim(),
                     };
 
@@ -53,7 +53,7 @@
                         return;
                     }
 
-                    if (guest.hasDiet && !guest.dietDetails) {
+                    if (guest.hasDiet == 'true' && !guest.dietDetails) {
                         alert(`Guest ${i} is missing diet details`);
                         return;
                     }
@@ -65,9 +65,17 @@
 
 				$.post("/update_rsvp", { guests: JSON.stringify(guests) }, (data) => {
                     if (data == 'OK') {
-                        location.reload();
+					   window.location.href = "/rsvp";
                     }
 				});
+            }
+
+            function fillLastNames(index) {
+                const lastname = document.getElementById(`guest_${index}_lastname`).value;
+                const numGuests = parseInt(document.getElementById('numGuests').value, 10);
+                for (let i = 1; i < 1 + numGuests; i++) {
+                    document.getElementById(`guest_${i}_lastname`).value = lastname;
+                }
             }
 
         </script>
@@ -78,46 +86,40 @@
 
         Number of guests you'd like to RSVP for:
         <select id='numGuests' onchange='numGuestsChange()'>
-            <option value = "1" selected>One</option>
-            <option value = "2">Two</option>
-            <option value = "3">Three</option>
-            <option value = "4">Four</option>
-            <option value = "5">Five</option>
-            <option value = "6">Six</option>
-            <option value = "7">Seven</option>
-            <option value = "8">Eight</option>
-            <option value = "9">Nine</option>
+            {% for i in range(1, 10) %}
+            <option value="{{i}}" {% if i == numGuestsSeldiected %} selected {% endif %}>{{i}}</option>
+            {% endfor %}
         </select> 
 
-        {% for i in range(1,10) %}
-        <div id="guest_{{i}}"  {% if i > 1 %}style='display:none'{% endif %}>
-            <h2>Guest {{i}} {% if i == 1 %}(You!){% endif %}</h2>
+        {% for guest in guests %}
+        <div id="guest_{{loop.index}}"  {% if loop.index > 1 %}style='display:none'{% endif %}>
+            <h2>Guest {{loop.index}} {% if i == 1 %}(You!){% endif %}</h2>
                 <div>
-                    First Name: <input id="guest_{{i}}_firstname" type="text"/> 
-                    Last Name: <input id="guest_{{i}}_lastname" type="text"/> 
-                    {% if i == 1 %}
-                    <a href='#'>(Fill all last names)</a>
+                    First Name: <input id="guest_{{loop.index}}_firstname" type="text" value='{{guest.firstname}}'/> 
+                    Last Name: <input id="guest_{{loop.index}}_lastname" type="text" value='{{guest.lastname}}'/> 
+                    {% if loop.index == 1 %}
+                    <a href='#' onclick='fillLastNames({{loop.index}})'>(Fill all last names)</a>
                     {% endif %}
                 </div>
                 <div>
                     Is this guest able to attend? 
-                    <select id="guest_{{i}}_attending" onchange="changeAttend({{i}})">
-                        <option value="true">Yes!</option>
-                        <option value="false">No</option>
+                    <select id="guest_{{loop.index}}_attending" onchange="changeAttend({{loop.index}})">
+                        <option value="true" {% if guest.isAttending == 'true'%} selected {% endif %}>Yes!</option>
+                        <option value="false" {% if guest.isAttending == 'false'%} selected {% endif %} >No</option>
                     </select>
                 </div>
-                <div id="guest_{{i}}_diet">
+                <div id="guest_{{loop.index}}_diet" {% if guest.isAttending == 'false' %} style='display: none' {% endif %}>
                     <div>
                     Does this guest have any dietary requirements? 
-                    <select id="guest_{{i}}_has_diet" onchange="changeDiet({{i}})">
-                        <option value="false">No</option>
-                        <option value="true">Yes</option>
+                    <select id="guest_{{loop.index}}_has_diet" onchange="changeDiet({{loop.index}})">
+                        <option value="false" {% if guest.hasDiet == 'false'%} selected {% endif %} >No</option>
+                        <option value="true" {% if guest.hasDiet == 'true'%} selected {% endif %}>Yes</option>
                     </select>
                     <a href="#">(See Menu)</a>
                     </div>
-                    <div id="guest_{{i}}_diet_details" style="display:none">
+                    <div id="guest_{{loop.index}}_diet_details" {% if guest.hasDiet == 'false' %} style='display: none' {% endif %}>
                         Please describe dietarty requirements:<br/> 
-                        <textarea id=guest_{{i}}_diet_details_text></textarea>
+                        <textarea id=guest_{{loop.index}}_diet_details_text value='{{guest.dietDetails}}'></textarea>
                     </div>
                 </div>
             </div>
