--- a/templates/existing_rsvp.html
+++ b/templates/existing_rsvp.html
@@ -1,12 +1,14 @@
 <html>
     <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
         <title>RSVP for Bethan and Edward's Wedding</title>
     </head>
     <body>
         <h1>RSVP for {{email}}</h1>
         <p>You have responded for the following guests:</p>
 
-		<table >
+		<table class="table">
 			<tbody>
 				<tr>
 					<td>First Name</td>
@@ -19,7 +21,6 @@
 				<tr>
                     <td>{{guest.firstname}}</td>
                     <td>{{guest.lastname}}</td>
-                    <td>{{guest.isAttending}}</td>
                     <td>{{guest.isAttending}}</td>
                     <td>{{guest.hasDiet}}</td>
                     <td>{{guest.dietDetails}}</td>
