--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
                 <h2>Saturday 11th August 2018</h2>
                 <br />
                 <h4>Please enter the password from your invite</h4>
-                <form id='form' class="form-inline" action="javacript:void()">
+                <form id='form' class="form-inline" action="javascript:void()">
 					<div class="form-group">
 						<input id="password" type="text" class="form-control"/>
 						<button onclick="handleSubmit()" class="btn btn-primary">&lt;Go&gt;</button>
