Remove stray quote

--- a/templates/new_rsvp.html
+++ b/templates/new_rsvp.html
@@ -121,7 +121,7 @@
                     </div>
                     <div id="guest_{{loop.index}}_diet_details" {% if guest.hasDiet == 'true' %} style='display: block' {% else %}  style='display: none' {% endif %}>
                         Please describe dietarty requirements:<br/> 
-                        <textarea id=guest_{{loop.index}}_diet_details_text>{{guest.dietDetails}}'</textarea>
+                        <textarea id=guest_{{loop.index}}_diet_details_text>{{guest.dietDetails}}</textarea>
                     </div>
                 </div>
             </div>
