--- a/templates/new_rsvp.html
+++ b/templates/new_rsvp.html
@@ -69,6 +69,9 @@
                     if (data == 'OK') {
 					   window.location.href = "/rsvp";
                     }
+                    else if (data == 'NOPE') {
+                        alert('Nice try!');
+                    }
 				});
             }
 
