--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         <title>Bethan and Edward's Wedding</title>
         <script>
             function handleSubmit() {
-                const password = document.getElementById('password').value.toLowerCase().trim();
+                const password = document.getElementById('password').value;
             
 				$.post("/validate_password", { password }, (data) => {
 					if (data === "success") {
