--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,10 @@
-<html>
+<!doctype html>
+<html lang="en">
     <head>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -44,9 +48,9 @@
                 <h2>Saturday 11th August 2018</h2>
                 <br />
                 <h4>Please enter the password from your invite</h4>
-                <form id='form' class="form-inline" action="javascript:void()">
+                <form id='form' class='form-inline justify-content-center' action="javascript:void()">
 					<div class="form-group">
-						<input id="password" type="text" class="form-control"/>
+						<input id="password" type="text" class="form-control mr-2"/>
 						<button onclick="handleSubmit()" class="btn btn-primary">&lt;Go&gt;</button>
 					</div>
                 </form>
