--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,13 @@
                   padding-top:5vh;
                   padding-bottom:5vh;
             }
+
+            @media only screen and (max-width: 576px) {
+                .vertical{
+                    margin-top:0vh;
+                }
+            }
+
         </style>
 
         <title>Bethan and Edward's Wedding</title>
