--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+        <title>Bethan and Edward's Wedding</title>
+
+        <link rel="stylesheet" 
+              href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" 
+              integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" 
+              crossorigin="anonymous">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -29,12 +34,10 @@
                     margin-top:0vh;
                 }
             }
-
         </style>
 
-        <title>Bethan and Edward's Wedding</title>
         <script>
-            function handleSubmit() {
+            function validatePassword() {
                 const password = document.getElementById('password').value;
             
 				$.post("/validate_password", { password }, (data) => {
@@ -58,7 +61,7 @@
                 <form id='form' class='form-inline justify-content-center' action="javascript:void()">
 					<div class="form-group">
 						<input id="password" type="text" class="form-control mr-2"/>
-						<button onclick="handleSubmit()" class="btn btn-primary">&lt;Go&gt;</button>
+						<button onclick="validatePassword()" class="btn btn-primary">&lt;Go&gt;</button>
 					</div>
                 </form>
             </div>
