--- a/templates/existing_rsvp.html
+++ b/templates/existing_rsvp.html
@@ -12,6 +12,7 @@
               crossorigin="anonymous">
     </head>
     <body>
+        <div class='container'>
         <h1>RSVP for {{email}}</h1>
         <p>You have responded for the following guests:</p>
 
@@ -39,6 +40,6 @@
         <center>
             <a href='?edit=1'>Make changes</a> | <a href='/site'>Back to main site</a>
         </center>
-
+        </div>
     </body>
 </html>
