--- a/templates/site.html
+++ b/templates/site.html
@@ -120,7 +120,7 @@
 
             <div class="alert alert-danger" role="alert">
                 <div id="email-entry">
-                    <h2>RSPV</h2>
+                    <h2>RSVP</h2>
                     <p>Please let us know if you can attend by <strong>Thursday 31st May 2018</strong></p>
                     
                     <form id='form' class='form-inline justify-content-center' action="javascript:void()">
@@ -133,7 +133,7 @@
                     </form>
                 </div>
                 <div id="email-confirmation" style="display: none">
-                    <h2>RSPV</h2>
+                    <h2>RSVP</h2>
                     <p>A confirmation code has been sent to your email address, 
                        please copy and paste it here 
                        (<a href='#' onclick='handleSendAgain()'>Send Again</a>)</p>
