Use email entry

--- a/templates/site.html
+++ b/templates/site.html
@@ -126,7 +126,7 @@
                     <form id='form' class='form-inline justify-content-center' action="javascript:void()">
                         <div class="form-group">
                             <label >Your e-mail</label>
-                            <input id="email" type="text" onkeydown="handleKeydown()" 
+                            <input id="email" type="email" onkeydown="handleKeydown()"
                                    class='form-control ml-2 mr-2' value='{{ email }}'/> 
                             <button onclick="handleSubmit()" class='btn btn-primary'>&lt;Go&gt;</button>
                         </div>
