--- a/templates/site.html
+++ b/templates/site.html
@@ -34,12 +34,6 @@
         <script>
             const emailRegex = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
 
-            function handleKeydown() {
-                if (event.key === 'Enter') {
-                    handleSubmit();
-                }
-            }
-
             function handleSubmit() {
                 const email = document.getElementById('email').value;
 
@@ -48,10 +42,17 @@
                     return;
                 }
                 
+                document.getElementById('email').disabled = true;
+                document.getElementById('email-button').disabled = true;
+
 				$.post("/validate_email", { email }, (data) => {
 					if (data === "success") {
                        document.getElementById('email-entry').style.display = 'none';
+                       document.getElementById('code').value = '';
                        document.getElementById('email-confirmation').style.display = 'block';
+					}
+					else if (data === "rsvp") {
+					   window.location.href = "/rsvp";
 					}
 					else {
                         alert("That is probably not a valid email. Please try another");
@@ -59,14 +60,6 @@
 				});
             }
 
-            // TODO: Forgive me for my sins I have just begun
-            function handleKeydown2() {
-                if(event.key === 'Enter') {
-                    handleSubmit2();
-                }
-            }
-
-            // TODO: Forgive me father
             function handleSubmit2() {
                 const code = document.getElementById('code').value;
                 
@@ -126,9 +119,8 @@
                     <form id='form' class='form-inline justify-content-center' action="javascript:void()">
                         <div class="form-group">
                             <label >Your e-mail</label>
-                            <input id="email" type="email" onkeydown="handleKeydown()"
-                                   class='form-control ml-2 mr-2' value='{{ email }}'/> 
-                            <button onclick="handleSubmit()" class='btn btn-primary'>&lt;Go&gt;</button>
+                            <input id="email" type="email" class='form-control ml-2 mr-2' value='{{ email }}'/> 
+                            <button id="email-button"onclick="handleSubmit()" class='btn btn-primary'>&lt;Go&gt;</button>
                         </div>
                     </form>
                 </div>
@@ -140,8 +132,7 @@
                     <form id='form' class='form-inline justify-content-center' action="javascript:void()">
                         <div class="form-group">
                             <label>Confirmation code</label>
-                            <input id="code" type="text" onkeydown="handleKeydown2()" 
-                                   class='form-control ml-2 mr-2' value='{{ code }}'/> 
+                            <input id="code" type="text" class='form-control ml-2 mr-2' value='{{ code }}'/> 
                             <button onclick="handleSubmit2()" class='btn btn-primary'>&lt;Go&gt;</button>
                         </div>
                     </form>
